--- a/demo-xposed/app/src/main/res/layout/activity_main.xml
+++ b/demo-xposed/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="cn.iinti.sekiro.demoapp.MainActivity">
+    tools:context="cn.codec.server.rpcserver.rpcserver.MainActivity">
 
     <TextView
         android:id="@+id/text"
